--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
   </head>
@@ -8,20 +9,33 @@
     <script>
 
       $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
+        var $tweetBody = $('#tweets');
+        $tweetBody.html('');
 
-        var index = streams.home.length - 1;
-        while(index >= 0){
-          var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
-          index -= 1;
-        }
+        var loadTweets = function() {
+          var index = streams.home.length - 1;
+          while(index >= 0){
+            var tweet = streams.home[index];
+            var $tweet = $('<div class="tweet"></div>');
+            $tweet.text('@' + tweet.user + ': ' + tweet.message);
+            $tweet.appendTo($tweetBody);
+            index -= 1;
+          }
+        };
+
+        loadTweets();
+
+        $('#newTweets').click(function() {
+          loadTweets();
+        });
 
       });
 
     </script>
+
+    <div id="tweets"></div>
+
+    <button id="newTweets">Click for new tweets</button>
+
   </body>
 </html>
